# duelme2

./: .clangd  .gitignore  CMakeLists.txt  README.md  build.ps1  build.sh  host.ps1  host.sh  hostclient.ps1  make.sh  server.py  testserver.py
_sandbox/3dtest/: game  stage_1.txt
_sandbox/anim_testing/: game
_sandbox/simple_grid_coll/: stage_cell.cpp  stage_cell.hpp
_sandbox/spatial_hash/: stage_2.txt
anim_testing/: Makefile  main.cpp
client/: CMakeLists.txt
client/include/: camera_manager.hpp  game_manager.hpp  globals.hpp  helpers.hpp  networking.hpp  player.hpp  protocol.hpp
client/include/player/: item.hpp  player.hpp  player_anims.hpp
client/include/stage/: stage_cell.hpp  stage_manager.hpp
client/src/: camera_manager.cpp  game_manager.cpp  globals.cpp  helpers.cpp  main.cpp  networking.cpp  player.cpp  player_anims.cpp
client/src/player/: item.cpp  player.cpp  player_anims.cpp
client/src/stage/: stage_cell.cpp  stage_manager.cpp
include/: game_manager.hpp  game_state.hpp  globals.hpp  helpers.hpp  networking.hpp  player.hpp  protocol.hpp
sandbox/3dtest/: main.cpp  stage_2.txt  stage_cell.cpp
sandbox/simple_grid_coll/: game  main.cpp
sandbox/spatial_hash/: spatial_grid.hpp
sandbox/stage_testing/: main.cpp
server/: CMakeLists.txt
server/inc/: collision_grid.hpp  game_state.hpp  hitboxes.hpp  physics.hpp  s_player.hpp  s_protocol.hpp  s_stage.hpp  server_logic.hpp
server/src/: collision_grid.cpp  game_state.cpp  hitboxes.cpp  physics.cpp  s_player.cpp  s_protocol.cpp  s_stage.cpp  server.cpp  server_logic.cpp
simple_grid_coll/: Makefile  collision_grid.cpp  collision_grid.hpp  game  main.cpp  stage_1.txt
simple_grid_coll/game.dSYM/Contents/Resources/DWARF/: game
spatial_hash/: game  main.cpp  spatial_grid.cpp  spatial_grid.hpp  stage_cell.cpp  test_helpers.hpp
src/: game_manager.cpp  game_state.cpp  globals.cpp  helpers.cpp  main.cpp  networking.cpp  player.cpp
stage_testing/: Makefile  game  main.cpp  stage_1.txt  stage_cell.hpp
test/: Makefile
